# Variscite

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  README.md  cam_capture  cam_capture.c  cmake_install.cmake  cv_cam_test.cpp  gstreamer_file.cpp  gstreamer_file.h  test_cam  test_cam.cpp  video_capture.cpp  video_capture.h
